--- a/CV page/index.html
+++ b/CV page/index.html
@@ -15,7 +15,16 @@
             </ul>
         </nav>
         <main>
+            <h1>
+                Welcome!
+            </h1>
+            <p>
+                This is just a small static site to intoduce myself, and allow you to review my CV, Personal statment and have acces to all my contact details should you wish to get in touch
+                
+                Many thanks
 
+                - Nick
+            </p>
         </main>
     </body>
 </html>
