--- a/CV page/personal_statement.html
+++ b/CV page/personal_statement.html
@@ -1,1 +1,28 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="viewport" content="width=device-width", initial-scale="1.0">
+        <title>Introduction</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+        <link rel="stylesheet" href="cv_syles.css">
+    </head>
+    <nav>
+        <li><a href="contact_details.html">Contact Details</a></li>
+        <li><a href="full_cv.html">Full CV</a></li>
+    </nav>
+    <body>
+        <h2>Personal Statement</h2>
+        <p>
+            Having worked in the hospitality industry for several years, I have decided 
+            to leave this industry to pursue a new career in ICT, with a view to 
+            specializing in cyber security. Through my years of work in hospitality, 
+            I have been able to acquire some skills that can be transferred to my new 
+            industry, these include: Quick decision making, being able to learn on the 
+            job, time management, organizing and managing workloads, and meeting deadlines.
+            Having studied some courses on my chosen subject as well as having a working 
+            knowledge of computers and the software readily available, such as the 
+            Microsoft Suite of applications.
+        </p>
+        <button onclick="history.back()">Go Back</button> 
+    </body>
+</html>
