--- a/hobbies webpage/index.html
+++ b/hobbies webpage/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="hobby_style.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hobbies</title>
     </head>
@@ -37,25 +38,25 @@
             new research that shows gaming can have real-life benfits. Below I have linked an
             article that explains this in a lot more detail.
         </p>
-        <a href="https://www.projectboldlife.com/health/unexpected-benefits-gaming-gamers-perspective/">
+        <a class="article" href="https://www.projectboldlife.com/health/unexpected-benefits-gaming-gamers-perspective/">
             People are realising the real-life benfits of gaming
         </a>
         <h1 id="Favorite Games">My Favorite games</h1>
             <section>
-                <h3>Call of Duty</h3>
+                <h2>Call of Duty</h2>
                 <p>This is a well known first-person shooter (FPS) that is
                     well known worldwide and is often played competitivly
                     for cash prizes
                 </p>
             </section>
             <section>
-                <h3>Rocket League</h3>
+                <h2>Rocket League</h2>
                 <p>A game similar to football using rocket powered cars. Like Call
                     of Duty, there are worldwide competative tornements.
                 </p>
             </section>
             <section>
-                <h3>Dota 2</h3>
+                <h2>Dota 2</h2>
                 <p>The first game to get international recognition for Esport competitions. 
                     It is a game using heroes organised into teams to combat the opposing Team
                     to destroy their base, using a range of skills and key-stroke commands.
@@ -69,12 +70,12 @@
                 width="200px"
             <figcaption>The logo from a famous Esports group called Team Liquid</figcaption>
         </figure>
-            <p>This is a common version of gaming "olympics" where countries vompete against each
+            <p>This is a common version of gaming "olympics" where countries compete against each
                 other to get international recognition and cash prizes. The Call of Duty Esports
                 cup is currently taking place, with the latest news displayed below.
             </p>
             <article>
-                <Header>Team Vitality and The MongolZ reach BLAST.tv Austin Major Final</Header>
+                <h2>Team Vitality and The MongolZ reach BLAST.tv Austin Major Final</h2>
                     <blockquote>
                     "Team Vitality and The MongolZ will face off in the Grand Final of the BLAST.tv Austin Major.
                     The French esports organisation defeated the German organisation, while the Mongolian side earned victory over the Brazilians."
